img si border 0 y cambio parrafos Conocenos

--- a/pages/somos.html
+++ b/pages/somos.html
@@ -80,7 +80,7 @@
             <div class="contenedorConocenos">
                 <!--Parrafos Quienes somos-->               
                 <div class="contenedorParrafo">
-                <p class="parrafoSomos"> Somos un equipo de cuatro mujeres apasionadas por el desarrollo web y la tecnología. Tres de nosotras somos de Colombia y una de Uruguay y trabajamos juntas para llevar a cabo proyectos desafiantes y emocionantes como este.
+                <p class="parrafoSomos"> Somos un equipo de tres mujeres apasionadas por el desarrollo web y la tecnología. Dos de nosotras somos de Colombia y una de Uruguay y trabajamos juntas para llevar a cabo proyectos desafiantes y emocionantes como este.
                 </p>
                 </div>
                 <div class="contenedorParrafo">
@@ -98,43 +98,34 @@
                     En resumen, estamos orgullosas de presentar este sitio web de e-commerce que representa todo lo que somos como equipo y todo lo que esperamos lograr como desarrolladoras web.
                 </p>
                 <hr>
-                </div> 
-                                   
+                </div>                                    
             </div>
         <section>
             <section>
                 <h1>Conoce a nuestro equipo</h1>
                 <div class="contenedorNosotras">
                     <div class="contenedorEquipo">
-                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/wxJHCFjs/Any-Conv-com-Mesa-de-trabajo-18-copia-4tablas-ingles-1.webp' border='0' alt='Any-Conv-com-Mesa-de-trabajo-18-copia-4tablas-ingles-1' class="avatar" loading="lazy"/></a>
+                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/wxJHCFjs/Any-Conv-com-Mesa-de-trabajo-18-copia-4tablas-ingles-1.webp' alt='Any-Conv-com-Mesa-de-trabajo-18-copia-4tablas-ingles-1' class="avatar" loading="lazy"/></a>
                         <button class="botonDev">Daniela Camacho</button>
                         <p class="parrafoDevs">                          
                         Nuestra programadora colombiana, es la especialista en la corrección de errores y la optimización del código. Con su ojo clínico, detecta rápidamente cualquier problema y trabaja arduamente para pulir y mejorar el código del sitio web.
                         </p>
                     </div>
                     <div class="contenedorEquipo">
-                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/W4SXyBQw/Any-Conv-com-Mesa-de-trabajo-18-copiatablas-ingles.webp' border='0' alt='Any-Conv-com-Mesa-de-trabajo-18-copiatablas-ingles' class="avatar" loading="lazy"/></a>
+                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/W4SXyBQw/Any-Conv-com-Mesa-de-trabajo-18-copiatablas-ingles.webp' alt='Any-Conv-com-Mesa-de-trabajo-18-copiatablas-ingles' class="avatar" loading="lazy"/></a>
                         <button class="botonDev">Denisse Mateus</button>                          
                         <p class="parrafoDevs">                           
                         Nuestra diseñadora colombiana, es una experta en el buen gusto y estilo, lo que le permite crear diseños impresionantes y atractivos para el sitio web. Siempre tiene en cuenta la experiencia del usuario y asegura que el aspecto visual del sitio sea lo mejor posible.
                         </p>
                     </div>
                     <div class="contenedorEquipo">
-                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/52KZYFtV/Any-Conv-com-Mesa-de-trabajo-18-copia-3tablas-ingles.webp' border='0' alt='Any-Conv-com-Mesa-de-trabajo-18-copia-3tablas-ingles'class="avatar" loading="lazy"/></a>
+                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/52KZYFtV/Any-Conv-com-Mesa-de-trabajo-18-copia-3tablas-ingles.webp' alt='Any-Conv-com-Mesa-de-trabajo-18-copia-3tablas-ingles'class="avatar" loading="lazy"/></a>
                         <button class="botonDev">Gabriela Nairac</button>
                         <p class="parrafoDevs">                       
                         Nuestra experta en análisis de datos y marketing uruguaya, es la encargada de la organización y estructura del sitio web. Tiene una visión clara del proyecto y sabe cómo llevarlo a cabo de manera efectiva.
                         </p>
-                    </div>                    
-                    <!-- <div class="contenedorEquipo">
-                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/02wxqn5w/Any-Conv-com-Mesa-de-trabajo-18-copia-2tablas-ingles.webp' border='0' alt='Any-Conv-com-Mesa-de-trabajo-18-copia-2tablas-ingles'class="avatar" loading="lazy"/></a>
-                        <button class="botonDev">Jenny Rojas</button>                        
-                        <p class="parrafoDevs">                          
-                            Nuestra analista de datos colombiana, se caracteriza por ser
-                            nuestra "geek" de las animaciones y efectos visuales. Su pasión por las animaciones y efectos cool, y siempre está buscando nuevas formas de mejorar la experiencia del usuario a través de la tecnología.
-                        </p>
-                    </div> -->
-                </div>
+                    </div>                
+               </div>
                     <section>
                 <h2>¡Gracias por visitarnos!</h2>               
             
