--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <form autocomplete="off">
                 <div>
                     <input type="search" name="q" placeholder="Buscar">
-                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' border='0' alt='LUPA'class="lupa" loading="lazy"/></a>
+                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
                 </div>
             </form>
             <a href="#" class="enlace">
@@ -90,7 +90,7 @@
                 <button class="compraAqui">Compra aquí</button>
             </div>          
         </section>          
-    </section> <!--Daniela modifique categorias, la hice slider-->
+    </section> 
     <div class="seccionCategorias"> <!--slide-container-->
         <h1>Nuestros productos</h1>
         <h3>Manejamos las referencias más reconocidas del mercado</h3>
@@ -109,8 +109,7 @@
                 </div>
                 <div class="categoria">
                     <figure>
-                        <!--Imagen alojada en URL externa-->
-                        <!-- A todas las url de imagenes les quite border=0 -->
+                        <!--Imagen alojada en URL externa-->                       
                         <a href='https://postimg.cc/6ycf5bTB' target='_blank'><img
                                 src='https://i.postimg.cc/13hCBLQV/iphone.png' alt='iphone'
                                 class="imgCategoria" width="90%" loading="lazy"></a>
@@ -139,8 +138,7 @@
                 </div>
                 <div class="categoria">
                     <figure>
-                        <!--Imagen alojada en URL externa-->
-                        <!-- A todas las url de imagenes les quite border=0 -->
+                        <!--Imagen alojada en URL externa-->                   
                         <a href='https://postimg.cc/6ycf5bTB' target='_blank'><img
                                 src='https://i.postimg.cc/13hCBLQV/iphone.png' alt='iphone'
                                 class="imgCategoria" width="90%" loading="lazy"></a>
@@ -171,7 +169,7 @@
                     <div class="descuento">20%</div> 
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/MKHrX6pw/R.png' border='0' alt='Laptop' loading="lazy"/></a>
+                        <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/MKHrX6pw/R.png' alt='Laptop' loading="lazy"/></a>
                     </figure>                    
                     <h2>HP Laptop 15-ef1012la</h2>
                     <div class="containerP">
@@ -184,7 +182,7 @@
                     <div class="descuento">30%</div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/Xp8ykMkC' target='_blank'><img src='https://i.postimg.cc/6psLwt7Y/microondas.png' border='0' alt='microondas' loading="lazy"/></a>
+                        <a href='https://postimg.cc/Xp8ykMkC' target='_blank'><img src='https://i.postimg.cc/6psLwt7Y/microondas.png' alt='microondas' loading="lazy"/></a>
                         </figure>                     
                     <h2>Horno microondas LG NeoChef™</h2>
                     <div class="containerP">
@@ -197,7 +195,7 @@
                     <div class="descuento">20%</div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/4nWH0Vb5' target='_blank'><img src='https://i.postimg.cc/DyTQ8cSt/combo-cel.png' border='0' alt='combo-cel' loading="lazy"/></a>
+                        <a href='https://postimg.cc/4nWH0Vb5' target='_blank'><img src='https://i.postimg.cc/DyTQ8cSt/combo-cel.png' alt='combo-cel' loading="lazy"/></a>
                         </figure>                    
                     <h2>Smartphone Xiaomi12Lite</h2>
                     <div class="containerP">
@@ -210,7 +208,7 @@
                     <div class="descuento">10%</div> 
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/ThfH0MCb' target='_blank'><img src='https://i.postimg.cc/MZQ2WzB9/tv.png' border='0' alt='tv' loading="lazy"/></a>
+                        <a href='https://postimg.cc/ThfH0MCb' target='_blank'><img src='https://i.postimg.cc/MZQ2WzB9/tv.png' alt='tv' loading="lazy"/></a>
                     </figure>                   
                     <h2>Smart tv Samsung 4k</h2>
                     <div class="containerP">
@@ -228,31 +226,31 @@
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/mzSnGBT0' target='_blank'><img src='https://i.postimg.cc/BbWfHnkQ/APPLE.png' border='0' alt='APPLE' class="marca1" loading="lazy"/></a>
+                        <a href='https://postimg.cc/mzSnGBT0' target='_blank'><img src='https://i.postimg.cc/BbWfHnkQ/APPLE.png' alt='APPLE' class="marca1" loading="lazy"/></a>
                     </figure>                   
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/fSNByFRY' target='_blank'><img src='https://i.postimg.cc/x8k7xVrp/XIAOMI.png' border='0' alt='XIAOMI'class="marca1" loading="lazy"/></a>
+                        <a href='https://postimg.cc/fSNByFRY' target='_blank'><img src='https://i.postimg.cc/x8k7xVrp/XIAOMI.png' alt='XIAOMI'class="marca1" loading="lazy"/></a>
                     </figure>                    
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/nCsGZpkN' target='_blank'><img src='https://i.postimg.cc/5Ng7BtF9/LG.png' border='0' alt='LG' class="marca3" loading="lazy"/></a>
+                        <a href='https://postimg.cc/nCsGZpkN' target='_blank'><img src='https://i.postimg.cc/5Ng7BtF9/LG.png' alt='LG' class="marca3" loading="lazy"/></a>
                     </figure>                   
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/TKs81dMm' target='_blank'><img src='https://i.postimg.cc/VNfz7vK7/HUAWEI.png' border='0' alt='HUAWEI'class="marca2" loading="lazy"/></a>
+                        <a href='https://postimg.cc/TKs81dMm' target='_blank'><img src='https://i.postimg.cc/VNfz7vK7/HUAWEI.png' alt='HUAWEI'class="marca2" loading="lazy"/></a>
                     </figure>                    
                 </div>
                 <div>
                     <figure>
                         <!--Imagen alojada en URL externa-->
-                        <a href='https://postimg.cc/R6M2bNwk' target='_blank'><img src='https://i.postimg.cc/xCHY8m81/SAMSUNG.png' border='0' alt='SAMSUNG'class="marca2" loading="lazy"/></a>
+                        <a href='https://postimg.cc/R6M2bNwk' target='_blank'><img src='https://i.postimg.cc/xCHY8m81/SAMSUNG.png' alt='SAMSUNG'class="marca2" loading="lazy"/></a>
                     </figure>                    
                 </div>             
         </section>
@@ -281,7 +279,7 @@
             <div class="footer1">
                 <h4>FORMAS DE PAGO</h4>
                 <figure>
-                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' border='0' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
+                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
                 </figure>
             </div>
         </div>  
@@ -290,7 +288,7 @@
         </div>
         <div id="whatsapp"><a href="https://web.whatsapp.com/" target="_blank" class="fa fa-whatsapp"></a>     
     </footer>
-    Link Javascript Bundel with Popper
+    <!-- Link Javascript Bundel with Popper -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script> -->
 <body>
 </html>
