--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -40,7 +40,7 @@
             <form autocomplete="off">
                 <div>
                     <input type="text" name="q" placeholder="Buscar">
-                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' border='0' alt='LUPA'class="lupa" loading="lazy"/></a>
+                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
                 </div>
             </form>
             <a href="#" class="enlace">           
@@ -90,43 +90,43 @@
             <div class="contenedor-items">
                 <div class="item">
                     <span class="titulo-item">Aire Acondicionado LG</span>
-                    <img src="https://imagizer.imageshack.com/img924/1756/vNv6W4.png" alt="" class="img-item">
+                    <img src="https://imagizer.imageshack.com/img924/1756/vNv6W4.png" alt="Producto en promoción" class="img-item" loading="lazy">
                     <span class="precio-item">$15.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
                     <span class="titulo-item">Heladera SAMSUNG No frost 363 Lts</span>
-                    <img src="https://imagizer.imageshack.com/img922/7452/JKBxHt.png" alt="" class="img-item">
+                    <img src="https://imagizer.imageshack.com/img922/7452/JKBxHt.png" alt="Producto en promoción" class="img-item" loading="lazy">
                     <span class="precio-item">$25.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
                     <span class="titulo-item">Minibar HACEB 95 9002547</span>
-                    <img src="https://imagizer.imageshack.com/img924/7990/UOQ2gC.png" alt="" class="img-item">
+                    <img src="https://imagizer.imageshack.com/img924/7990/UOQ2gC.png" alt="Producto en promoción" class="img-item" loading="lazy">
                     <span class="precio-item">$35.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
                     <span class="titulo-item">Lavadora Carga Superior SAMSUNG</span>
-                    <img src="https://imagizer.imageshack.com/img924/7673/EG0wU4.png" alt="" class="img-item">
+                    <img src="https://imagizer.imageshack.com/img924/7673/EG0wU4.png" alt="Producto en promoción" class="img-item" loading="lazy">
                     <span class="precio-item">$18.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
                     <span class="titulo-item">Cocina HACEB ROMERO 50-T GN PL</span>
-                    <img src="https://imagizer.imageshack.com/img924/55/4E0vXU.png" alt="" class="img-item">
+                    <img src="https://imagizer.imageshack.com/img924/55/4E0vXU.png" alt="Producto en promoción" class="img-item" loading="lazy">
                     <span class="precio-item">$32.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
                     <span class="titulo-item">Horno Microondas LG MS0936Gir</span>
-                    <img src="https://imagizer.imageshack.com/img923/9641/WKWPvg.png" alt="" class="img-item">
+                    <img src="https://imagizer.imageshack.com/img923/9641/WKWPvg.png" alt="Producto en promoción" class="img-item" loading="lazy">
                     <span class="precio-item">$18.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
                     <span class="titulo-item">Freidora de aire OSTER 4lt 21382951</span>
-                    <img src="https://imagizer.imageshack.com/img922/3224/17iVKg.png" alt="" class="img-item">
+                    <img src="https://imagizer.imageshack.com/img922/3224/17iVKg.png" alt="Producto en promoción" class="img-item" loading="lazy">
                     <span class="precio-item">$54.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
@@ -188,7 +188,7 @@
             <div class="footer1">
                 <h4>FORMAS DE PAGO</h4>
                 <figure>
-                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' border='0' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
+                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
                 </figure>
             </div>
         </div>  
