--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -35,7 +35,7 @@
             <form autocomplete="off">
                 <div>
                     <input type="text" name="q" placeholder="Buscar">
-                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' border='0' alt='LUPA'class="lupa" loading="lazy"/></a>
+                    <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
                 </div>
             </form>
             <a href="#" class="enlace">           
@@ -106,7 +106,7 @@
         <div class="footer1">
             <h4>FORMAS DE PAGO</h4>
             <figure>
-                <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' border='0' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
+                <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/15FR11yS/Medios-de-pago.png' alt='Medios-de-pago'class="financiacion" loading="lazy"/></a>
             </figure>
         </div>
     </div>  
