--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </form>
             <a href="#" class="enlace">
                 <figure>
-                <img src="img/logo cosmos - copia.png" alt="Logo" class="logo">
+                <img src="img/logo cosmos - copia.png" alt="Logo" class="logo" width="80%">
                 </figure>
             </a>
             <ul class="menu">
