--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -45,7 +45,7 @@
             </form>
             <a href="#" class="enlace">           
                 <figure>
-                    <img src="../img/logo cosmos - copia.png" alt="Logo" class="logo" width="80%">
+                    <img src="../img/logo cosmos - copia.png" alt="Logo" class="logo" width="14rem" height="6rem">
                 </figure>             
             </a>
             <ul class="menu">
