logo con enlace a index

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' alt='LUPA'class="lupa" loading="lazy"/></a>
                 </div>
             </form>
-            <a href="#" class="enlace">
+            <a href="index.html" class="enlace">
                 <figure>
                 <img src="img/logo cosmos - copia.png" alt="Logo" class="logo" width="14rem" height="6rem">
                 </figure>
