--- a/pages/somos.html
+++ b/pages/somos.html
@@ -39,7 +39,7 @@
                     <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' border='0' alt='LUPA'class="lupa" loading="lazy"/></a>
                 </div>
             </form>
-            <a href="#" class="enlace">           
+            <a href="../index.html" class="enlace">           
                 <figure>
                     <img src="../img/logo cosmos - copia.png" alt="Logo" class="logo" width="14rem" height="6rem">
                 </figure>             
