--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -68,7 +68,7 @@
             </div>                 
         </nav>
     </header>  
-<main>   
+<main>       
     <h1>Mis datos</h1>
     <h2>Accede a tu cuenta</h2>
     <section class="contenedorRegistro">
@@ -81,7 +81,8 @@
         <p>Estoy de acuerdo con los <a href="#">Términos y Condiciones</a></p>
         <input type="submit" value="Registrarme" class="botonFormulario">
         <p> <a href="#">Ya tengo cuenta</a></p>
-    </section>          
+    </section>        
+    </div>  
 </main>
 <footer id="pie">
     <div class="contenedorFooter1">
