ficha de producto y gateway con estilos, falta boton de cierre X

--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="../css/responsive.css">
         <link rel="stylesheet" href="../css/social-media.css">
         <link rel="stylesheet" href="../css/form.css">
-        <link rel="stylesheet" href="../css/carrito.css">
+        <!-- <link rel="stylesheet" href="../css/carrito.css"> -->
         <!--Link Fuente-->
         <script src="https://use.fontawesome.com/502b7294a9.js"></script>     
         <!--Link FavIcon-->
@@ -24,7 +24,7 @@
             <input type="checkbox" id="check">
             <label for="check"class="checkbtn">
                 <i class="bi bi-truck"></i>
-                <a href="carrito.html">
+                <a href="fichaproducto.html">
                 <i class="bi bi-cart"></i>
             </a>
             <a href="micuenta.html">
