--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/social-media.css">
-    <link rel="stylesheet" href="css/form.css">
-    <link rel="stylesheet" href="css/carrito.css">
+    <!-- <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/carrito.css"> -->
     <!--Link Fuente-->
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>
     <!-- Link Boostrap -->
@@ -33,7 +33,7 @@
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="bi bi-truck"></i>
-                <a href="pages/carrito.html">
+                <a href="pages/fichaproducto.html">
                 <i class="bi bi-cart"></i>
                 </a>   
                 <a href="pages/micuenta.html">        
