--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/responsive.css">
         <link rel="stylesheet" href="../css/social-media.css">
-        <link rel="stylesheet" href="../css/form.css">
+        <!-- <link rel="stylesheet" href="../css/form.css"> -->
         <link rel="stylesheet" href="../css/carrito.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -29,7 +29,7 @@
             <input type="checkbox" id="check">
             <label for="check"class="checkbtn">
                 <i class="bi bi-truck"></i>
-                <a href="carrito.html">
+                <a href="fichaproducto.html">
                 <i class="bi bi-cart"></i>
             </a>
             <a href="micuenta.html">
