loading lazy img ficha producto y pasarela

--- a/pages/fichaproducto.html
+++ b/pages/fichaproducto.html
@@ -27,13 +27,13 @@
     <div class="container flex">
       <div class="left">
         <div class="main_image">
-          <img src="https://imageshack.com/i/pnWKWPvgp" class="slide">
+          <img src="https://imageshack.com/i/pnWKWPvgp" class="slide" loading="lazy">
         </div>
         <div class="option flex">
-          <img src="https://imageshack.com/i/poOBoDe4p" onclick="img('https:/imageshack.com/i/poOBoDe4p')">
-          <img src="https://imageshack.com/i/pm8p38Csp" onclick="img('https:/imageshack.com/i/pm8p38Csp')">
-          <img src="https://imageshack.com/i/poa5eIshp" onclick="img('https:/imageshack.com/i/poa5eIshp')">
-          <img src="https://imageshack.com/i/pnWKWPvgp" onclick="img('https:/imageshack.com/i/pnWKWPvgp')">
+          <img src="https://imageshack.com/i/poOBoDe4p" loading="lazy " onclick="img('https:/imageshack.com/i/poOBoDe4p')">
+          <img src="https://imageshack.com/i/pm8p38Csp" loading="lazy " onclick="img('https:/imageshack.com/i/pm8p38Csp')">
+          <img src="https://imageshack.com/i/poa5eIshp" loading="lazy " onclick="img('https:/imageshack.com/i/poa5eIshp')">
+          <img src="https://imageshack.com/i/pnWKWPvgp" loading="lazy " onclick="img('https:/imageshack.com/i/pnWKWPvgp')">
         </div>
       </div>
       <div class="right">
