--- a/pages/pasarela.html
+++ b/pages/pasarela.html
@@ -59,7 +59,7 @@
                 <h3 class="title">Medios de pago </h3>
                 <div class="inputBox">
                     <p class="inputPago">Tipos de tarjetas aceptadas:</p>
-                    <img src= "https://imagizer.imageshack.com/img922/9067/Mmha0E.png">
+                    <img src= "https://imagizer.imageshack.com/img922/9067/Mmha0E.png" loading="lazy">
                 </div>
                 <div class="inputBox">
                     <p class="inputPago" >Nombre de la tarjeta  :</p>
