cambio nombre html Carrito a Ofertas

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <!--Link Css-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/social-media.css">
-    <!-- <link rel="stylesheet" href="css/form.css">
-    <link rel="stylesheet" href="css/carrito.css"> -->
+    <link rel="stylesheet" href="css/social-media.css">  
     <!--Link Fuente-->
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>
     <!-- Link Boostrap -->
@@ -65,7 +63,7 @@
                         <li>Fotografía</li>
                     </ul>
                 </li>
-                <li><a href="pages/carrito.html">Carrito</a></li>
+                <li><a href="pages/carrito.html">Ofertas</a></li>
                 <li><a href="pages/micuenta.html">Mi cuenta</a></li>
                 <li><a href="pages/somos.html">Conocenos</a></li>
                 
