--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -21,7 +21,7 @@
     <!--Descripción del sitio para el SEO-->
     <meta name="description" content="¡Haz tu compra ahora y aprovecha nuestras promociones especiales!"/>
     <!-- <script src="../app.js" async></script> -->
-    <title>Cosmos I Carro de compras</title> 
+    <title>Cosmos I Ofertas del día</title> 
 </head>
 <body>
     <header>
@@ -60,7 +60,7 @@
                         <li>Fotografía</li>
                     </ul>      
                 </li>                     
-                <li><a href="carrito.html">Carrito</a></li>    
+                <li><a href="carrito.html">Ofertas</a></li>    
                 <li><a href="micuenta.html">Mi cuenta</a></li>                    
                 <li><a href="somos.html">Conocenos</a></li>  
             </ul> 
