--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -55,7 +55,7 @@
                         <li>Fotografía</li>
                     </ul>      
                 </li>                     
-                <li><a href="carrito.html">Carrito</a></li>    
+                <li><a href="carrito.html">Ofertas</a></li>    
                 <li><a href="micuenta.html">Mi cuenta</a></li>                    
                 <li><a href="somos.html">Conocenos</a></li>  
             </ul> 
