--- a/pages/pdd.html
+++ b/pages/pdd.html
@@ -8,9 +8,7 @@
     <!--Link Css-->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/responsive.css">
-    <link rel="stylesheet" href="../css/social-media.css">
-    <!-- <link rel="stylesheet" href="../css/form.css">
-    <link rel="stylesheet" href="../css/carrito.css"> -->
+    <link rel="stylesheet" href="../css/social-media.css">  
     <!--Link Fuente-->
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>     
     <!--Link FavIcon-->
@@ -56,7 +54,7 @@
                         <li>Fotografía</li>
                     </ul>      
                 </li>                     
-                <li><a href="carrito.html">Carrito</a></li>    
+                <li><a href="carrito.html">Ofertas</a></li>    
                 <li><a href="micuenta.html">Mi cuenta</a></li>                    
                 <li><a href="somos.html">Conocenos</a></li>  
             </ul> 
