responsive ficha de producto

--- a/pages/fichaproducto.html
+++ b/pages/fichaproducto.html
@@ -24,7 +24,7 @@
     <div class="container flex">
       <div class="left">
         <div class="main_image">
-          <img src="https://imageshack.com/i/pnWKWPvgp" class="slide" loading="lazy">
+          <img src="https://imageshack.com/i/pnWKWPvgp" class="slideProducto" loading="lazy">
         </div>
         <div class="option flex">
           <img src="https://imageshack.com/i/poOBoDe4p" loading="lazy " onclick="img('https:/imageshack.com/i/poOBoDe4p')">
