--- a/pages/pasarela.html
+++ b/pages/pasarela.html
@@ -20,7 +20,7 @@
 <body>
 
 <div class="container">
-    <form action="">
+    <form id="pasarela">
         <div class="row">
             <div class="col">
                 <h3 class="title">Datos personales</h3>
