--- a/pages/fichaproducto.html
+++ b/pages/fichaproducto.html
@@ -22,6 +22,10 @@
 <body>
   <section>
     <div class="container flex">
+      <div class="contenedorBotonCierre">
+        <a href="../pages/carrito.html" class="botonCierreProducto">x</a>
+      </div>
+      
       <div class="left">
         <div class="main_image">
           <img src="https://imageshack.com/i/pnWKWPvgp" class="slideProducto" loading="lazy">
