--- a/pages/pasarela.html
+++ b/pages/pasarela.html
@@ -21,6 +21,7 @@
 
 <div class="container">
     <form id="pasarela">
+        <a href="../pages/fichaproducto.html" class="botonCierrePasarela">x</a>
         <div class="row">
             <div class="col">
                 <h3 class="title">Datos personales</h3>
