--- a/pages/pdd.html
+++ b/pages/pdd.html
@@ -104,7 +104,7 @@
     <section>
     <div class="categoriaBanner">    
         <figure>
-            <img src="https://imagizer.imageshack.com/img924/6560/RDU26k.jpg" alt="Banner promocional" loading="lazy">
+            <img src="https://imagizer.imageshack.com/v2/xq70/922/kB1y3k.jpg" alt="Banner promocional" loading="lazy">
         </figure>    
             <button class="botonBanner2">Compra ahora</button>      
     </div>
